# netlistDB

./: .appveyor.yml  .cproject  .doxygen  .gitignore  .project  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  meson.build
doc/: .doxygen  conf.py  netlist_normal_form.md
include/netlistDB/: bit_utils.h  common.h  function_def.h  inode.h  netlist.h  operator_defs.h  pointer_container.h  statement_assignment.h  statement_hwprocess.h  statement_if.h  usage_cache_key.h  varId.h
include/netlistDB/hw_type/: aint.h  common.h  hw_int.h  hw_int_value.h  ihw_type.h  ihw_type_value.h
include/netlistDB/parallel_utils/: erase_if.h
include/netlistDB/query/: backtrack_context.h  expr_sensitivity_probe.h  query_enclosure.h  query_match.h  query_path.h  query_public_net.h  query_sensitivity.h  query_structural_cmp.h  query_structural_compatible.h  query_traverse.h  statement_visitor.h
include/netlistDB/serializer/: namescope.h  serialization_io.h  serializer.h  verilog.h  verilog_tmp_var_extractor.h
include/netlistDB/serializer/verilog/: verilog_templates.h
include/netlistDB/transform/: indexed_assignment_to_assignment_of_concat.h  mark_inter_process_nets.h  normalize.h  reduce_statement.h  remove_by_mask.h  remove_useless.h  statement_to_hwprocess.h  to_hdl_friendly.h  transformation.h
include/netlistDB/utils/: chained_iterator.h  erase_if.h  groupedby.h  ordered_set.h  sensitivity_ctx.h  thread_pool.h  timer.h
scripts/: templates_to_cpp.py
src/: assignment.cpp  bit_utils.cpp  component_map.cpp  constants.h  function_call.cpp  function_def.cpp  function_def.h  istatement.cpp  meson.build  net.cpp  netlist.cpp  netlist.h  operation_node.cpp  operator_defs.cpp  operator_defs.h  ordered_set.h  query.cpp  query.h  signal.cpp  statemen_if.h  statement_assignment.cpp  statement_assignment.h  statement_hwprocess.cpp  statement_hwprocess.h  statement_if.cpp  statement_if.h  value.h  varId.h
src/debug_utils/: timer.cpp
src/hw_type/: aint.cpp  common.cpp  common.h  hw_int.cpp  hw_int.h  hw_int_value.cpp  hw_int_value.h  ihw_type.cpp  ihw_type.h  ihw_type_value.h
src/parallel_utils/: erase_if.h  errase.h  inclusive_scan.h
src/query/: backtrack_context.cpp  backtrack_context.h  expr_sensitivity_probe.cpp  expr_sensitivity_probe.h  query.cpp  query.h  query_enclosure.cpp  query_enclosure.h  query_flooding.h  query_match.cpp  query_match.h  query_path.cpp  query_path.h  query_public_net.cpp  query_public_net.h  query_sensitivity.cpp  query_sensitivity.h  query_structural_cmp.cpp  query_structural_cmp.h  query_structural_compatible.cpp  query_structural_compatible.h  query_traverse.cpp  query_traverse.h  statement_visitor.cpp
src/serializer/: namescope.cpp  namescope.h  serializer.cpp  serializer.h  serializer_io.cpp  verilog.cpp  verilog.h  verilog_constants.cpp  verilog_ops.cpp  verilog_statements.cpp  verilog_structural.cpp  verilog_tmp_var_extractor.cpp
src/transform/: indexed_assignment_to_assignment_of_concat.cpp  indexed_assignmet_to_assignment_of_concat.cpp  indexed_assignmet_to_assignment_of_concat.h  mark_inter_process_nets.cpp  normalize.cpp  normalize.h  reduce_statement.cpp  reduce_statement.h  reduce_stetement.h  remove_by_mask.cpp  remove_by_mask.h  remove_useless.cpp  remove_useless.h  statement_to_hwprocess.cpp  statement_to_hwprocess.h  to_hdl_friendly.cpp  transformation.h
src/utils/: chained_iterator.h  groupedby.h  ordered_set.h  thread_pool.cpp  timer.cpp
tests/: basic_query_match_test.cpp  basic_query_test.cpp  basic_test.cpp  chained_iter_test.cpp  erase_if_test.cpp  expr_sensitivity_probe_test.cpp  igraph_benchmark.cpp  large_query_match_test.cpp  large_query_test.cpp  meson.build  netlist_to_igraph.cpp  netlist_to_igraph.h  ordered_set_test.cpp  query_enclosure_test.cpp  query_flooding_test.cpp  query_sensitivity_test.cpp  query_structural_cmp_test.cpp  query_traverse_test.cpp  reduce_statement_test.cpp  statement_assignment_test.cpp  statement_if_test.cpp  statement_to_hwprocess_test.cpp  taskflow_test.cpp  tbb_taskflow_benchmark.cpp  test_graphs.cpp  test_graphs.h  thread_pool_test.cpp  timer.h  transform_remove_useless_test.cpp  unsigned_val_test.cpp  verilog_basic_test.cpp  verilog_hierarchy_test.cpp  verilog_simple_modules_test.cpp
tests/components/: async_reg.h  bram.h  ff.h  latch.h  mux.h  wire.h
